// Copyright(c) 2017-2018 Zededa, Inc.
// All rights reserved.

syntax = "proto3";

option go_package = "github.com/lf-edge/eve/api/go/config";
option java_package = "com.zededa.cloud.uservice.proto";

message ipRange {
        string start = 1;
        string end = 2;
}

enum proxyProto {
        PROXY_HTTP    = 0;
        PROXY_HTTPS   = 1;
        PROXY_SOCKS   = 2;
        PROXY_FTP     = 3;
        PROXY_OTHER   = 255;
}

message ProxyServer {
       proxyProto proto  = 1;
       string     server = 2;
       uint32     port   = 3;
}

message ProxyConfig {
       // enable network level proxy in the form of WPAD
       bool networkProxyEnable = 1;

       // dedicated per protocol information
       repeated ProxyServer proxies = 2;

       // exceptions seperated by commas
       string exceptions = 3;

       // or pacfile can be in place of others
       // base64 encoded
       string pacfile = 4;

       // Direct URL for wpad.dat download
       string networkProxyURL = 5;

       // Uploaded proxy certificate or certifcate chain for MITM
       // this may be needed either in explicit (has ProxyServer items), automatic
       // (networkProxyEnable) or transparent (network layer not aware of proxy)
       repeated bytes proxyCertPEM = 6;
}

// deprecated use ZnetStaticDNSEntry
message ZedServer {
        string HostName   = 1;
        repeated string EID = 2;
}

// These are list of static mapping that can be added to network
message ZnetStaticDNSEntry {
        string HostName   = 1;
        repeated string Address = 2;
}

enum DHCPType {
        DHCPNoop = 0;
        // Statically configure the DHCP for port
        Static = 1;

        // Don't run any DHCP, we are in passthrough mode for app
        DHCPNone = 2;

        // deprecated = 3;

        // Run the DHCP client on this port
        Client = 4;
}

// Common for IPv4 and IPv6
message ipspec {
        DHCPType   dhcp = 2;

        // subnet is CIDR format...x.y.z.l/nn
        string subnet = 3;
        string gateway = 5;
        string domain = 6;
        string ntp = 7;
        repeated string dns = 8;

        // for IPAM management when dhcp is turned on.
        // If none provided, system will default pool.
        ipRange dhcpRange = 9;
}

enum NetworkType {
        NETWORKTYPENOOP = 0;
        V4 = 4;
        V6 = 6;
        CryptoV4 = 24;
        CryptoV6 = 26;
        CryptoEID = 14;
}

enum WirelessType {
        TypeNOOP = 0;
        WiFi = 1;
        Cellular = 2;
}

enum WiFiKeyScheme {
        SchemeNOOP = 0;
        WPAPSK = 1;        // WPA-PSK
        WPAEAP = 2;        // WPA-EAP or WPA2 Enterprise
}
